Add a selfObtainable flag
